Backend dependencies, and cleanup